Improved grids on tablet vertical. Now 4  columns or less are respected on tablet. Also added grid-fixed to fix a grid.

--- a/css/devices/_mobile.scss
+++ b/css/devices/_mobile.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width:0px) and (max-width:799px){
+@media screen and (min-width:0px) and (max-width:767px){
 
 	@include mobile-core;
 
