--- a/css/devices/_tablet.scss
+++ b/css/devices/_tablet.scss
@@ -1,4 +1,4 @@
-@media screen and  (min-width:800px) and (max-width: 978px) {
+@media screen and  (min-width:768px) and (max-width: 978px) {
 
 	@include tablet-core;
 }
